# Api_BigBurguer

./: .gitignore  README.md  alembic.ini  app.py  main.py  models.py  pyproject.toml  requirements.txt  wsgi.py
app/: asgi.py  cli.py  command.py  config.py  controller.py  main.py  model.py  schema.py
app/category/: controller.py  model.py  repository.py  schema.py  service.py
app/common/: response.py  schema.py
app/common/util/: __init__.py  to_snakecase.py
app/employee/: controller.py  model.py  repository.py  schema.py  service.py
app/infra/: server.py
app/infra/db/: __init__.py  base.py  session.py
app/order/: controller.py  enum.py  model.py  repository.py  schema.py  service.py
app/product/: command.py  controller.py  model.py  repository.py  schema.py  service.py
docs/old/: controller.py  enum.py  main.py  wsgi.py
docs/old/model/: categoria.py  funcionario.py  pedido.py  pedido_produto.py  produto.py
migration/: env.py
migration/versions/: c5382eb14492_first_release.py
