[tool.poetry]
name = "api-bigburguer"
version = "0.1.0"
description = "API REST"
authors = ["Gabriel Alexandre"]
packages = [{include = "app"}]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"
sqlalchemy = "^2.0.36"
psycopg = {extras = ["binary"], version = "^3.2.3"}
flask-cors = "^5.0.0"
python-dotenv = "^1.0.1"
fastapi = {extras = ["standard"], version = "^0.115.6"}

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.2"
types-flask-cors = "^5.0.0.20240902"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
